Fix minor overflow issue for card decorator on small screens

--- a/src/_assets/css/components/_card.css
+++ b/src/_assets/css/components/_card.css
@@ -97,7 +97,7 @@
 	inset: auto 0 var(--size-m) auto;
 	z-index: 1;
 
-	max-inline-size: 80%;
+	max-inline-size: calc(100% - 1em);
 	padding: 1px var(--size-xs);
 
 	line-height: 1.3;
